--- a/package.json
+++ b/package.json
@@ -1,54 +1,22 @@
 {
-  "name": "barebones-react-typescript-express",
+  "name": "backend-test",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/server.js",
+  "main": "index.js",
   "scripts": {
-    "watch:build": "webpack -w",
-    "watch:server": "nodemon dist/server.js",
-    "dev": "npm-run-all --parallel watch:*",
-    "start": "node dist/server.js",
-    "postinstall": "webpack"
+    "start": "tsc && node index.ts",
+    "dev": "ts-node index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@azure/msal-browser": "^2.38.0",
-    "@azure/msal-react": "^1.5.7",
-    "@types/express": "^4.17.13",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
-    "axios": "^1.5.1",
-    "bootstrap": "^5.3.2",
-    "chart.js": "^4.3.0",
-    "cheerio": "^1.0.0-rc.12",
-    "css-loader": "^6.3.0",
+    "@types/node": "^20.8.10",
     "express": "^4.18.2",
-    "faker": "^6.6.6",
-    "lottie-react": "^2.4.0",
-    "node-fetch": "^3.3.2",
-    "puppeteer": "^21.4.1",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.9.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.0",
-    "react-toastify": "^9.1.3",
-    "sass": "^1.41.1",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "swiper": "^11.0.1",
-    "ts-loader": "^9.2.5",
-    "typescript": "^4.9.3",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0",
-    "webpack-node-externals": "^3.0.0"
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/puppeteer": "^7.0.4",
-    "@types/react-router-dom": "^5.3.3",
-    "nodemon": "^2.0.20",
-    "npm-run-all": "^4.1.5"
+    "@types/express": "^4.17.20",
+    "ts-node": "^10.9.1"
   }
 }
